--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-    "name": "league/:package_name",
+    "name": ":vendor_name/:package_name",
     "description": ":package_description",
     "keywords": [
-        "league",
+        ":vendor_name",
         ":package_name"
     ],
-    "homepage": "https://github.com/thephpleague/:package_name",
     "license": "MIT",
     "authors": [
         {
@@ -17,6 +16,7 @@
     ],
     "require": {
         "php" : ">=5.3.0"
+        "illuminate/support": "~4.2"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
@@ -24,12 +24,12 @@
     },
     "autoload": {
         "psr-4": {
-            "League\\Skeleton\\": "src"
+            ":VendorName\\:PackageName\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "League\\Skeleton\\Test\\": "tests"
+            ":VendorName\\:PackageName\\Test\\": "tests"
         }
     },
     "extra": {
